--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "embla-carousel-react": "^8.6.0",
     "fabric": "^6.7.1",
     "input-otp": "^1.4.2",
+    "kuroshiro": "^1.2.0",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -66,6 +69,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "wanakana": "^5.3.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
